tests/test-dirs/upstream-typing-recovery/original-tests/multiply_bound_variable.compilers.reference
File "multiply_bound_variable.ml", line 1:
Error: Multiple errors were encountered
File "multiply_bound_variable.ml", line 10, characters 8-9:
10 | let (x, x) = (1, 2)
             ^
  Variable x is bound several times in this matching
File "multiply_bound_variable.ml", line 15, characters 8-9:
15 |   | (x, x, y) -> x + y
             ^
  Variable x is bound several times in this matching
File "multiply_bound_variable.ml", line 19, characters 10-12:
19 | let z = f 10 + y
               ^^
  The constant 10 has type int but an expression was expected of type
    'a * int * int
File "multiply_bound_variable.ml", line 21, characters 17-19:
21 | let a : string = 10
                      ^^
  The constant 10 has type int but an expression was expected of type string
